fix wrap bug

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ main {
 
 .controls__input--color::-webkit-color-swatch {
   border: none;
+  border-radius: 0;
 }
 
 .controls__input--color::-webkit-color-swatch-wrapper {
